# R3D3

./: .gitignore  Cargo.toml  README.md  build.rs
assets/shaders/: triangle.vert
assets/shaders/render_gl/: debug_lines.frag  debug_lines.vert
lib/gl/: .build.rs.swp  Cargo.toml  build.rs
lib/render_gl_derive/: Cargo.toml
src/: cube.rs  main.rs  render_gl.rs  resources.rs  triangle.rs
src/camera/: mod.rs  movement.rs  target_camera.rs
src/render_gl/: .mod.rs.swp  buffer.rs  color_buffer.rs  data.rs  mod.rs  shader.rs
src/render_gl/debug_lines/: line_point.rs  mod.rs  shared_debug_lines.rs
