[package]
name = "r3d3"
version = "0.1.0"
authors = ["stephaneworkspace <s.bressani@bluewin.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.32.2", features = ["bundled", "static-link"] }
#gl = { version = "0.14.0", path = "../lib/gl" }
gl = { path = "lib/gl" }
failure = "0.1.6"
render_gl_derive = { path = "lib/render_gl_derive" }
vec-2-10-10-10 = "0.1.2"
half = "1.4.0"
nalgebra = "0.19.0"

[build-dependencies]
walkdir = "2.1"

[features]
gl_debug = ["gl/debug"]
